# bransh

./: .rustfmt.toml  Cargo.toml  README.md  TODO.md
crates/br-builtin/: Cargo.toml
crates/br-builtin/src/: lib.rs
crates/br-builtin/src/commands/: alias.rs  cd.rs  get.rs  mod.rs  set.rs
crates/br-cli/: Cargo.toml
crates/br-cli/src/: history.rs  key.rs  lib.rs  tabcomp.rs  util.rs
crates/br-command/: Cargo.toml
crates/br-command/src/: lib.rs
crates/br-command/src/builtins/: alias.rs  cd.rs  exit.rs  get.rs  mod.rs  set.rs
crates/br-data/: Cargo.toml
crates/br-data/src/: command.rs  context.rs  lib.rs  options.rs
crates/br-executer/: Cargo.toml
crates/br-executer/src/: lib.rs
crates/br-parser/: Cargo.toml
crates/br-parser/src/: lexer.rs  lib.rs  parser.rs
crates/br-script/: Cargo.toml
crates/br-script/src/: lib.rs
src/: main.rs  options.rs
src/cli/: history.rs  key.rs  mod.rs  tabcomp.rs  util.rs
src/command/: alias.rs  cd.rs  get.rs  mod.rs  set.rs  tokenize.rs
src/prelude/: mod.rs
src/script/: mod.rs
src/util/: mod.rs  tabcomp.rs
