[package]
name = "bransh"
description = "A simple shell written in Rust"
authors = ["L3af <L3afMeAlon3@gmail.com>"]
version = "0.1.0"
edition = "2018"
repository = "https://github.com/L3afMe/bransh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
ctrlc = "3.1.8"
gumdrop = "0.8.0"
home = "0.5.3"
whoami = "1.1.1"
