[package]
name = "bransh"
description = "A simple shell written in Rust"
authors = ["L3af <L3afMeAlon3@gmail.com>"]
version = "0.1.0"
edition = "2018"
repository = "https://github.com/L3afMe/bransh"

[workspace]
members = ["crates/*/"]

[dependencies]
br-cli      = { path = "./crates/br-cli" }
br-data     = { path = "./crates/br-data" }
br-executer = { path = "./crates/br-executer" }
br-parser   = { path = "./crates/br-parser" }
br-script   = { path = "./crates/br-script" }
