[package]
name = "br-cli"
version = "0.1.0"
authors = ["L3af <L3afMeAlon3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
br-builtin  = { path = "../br-builtin"  }
br-data     = { path = "../br-data"     }
br-executer = { path = "../br-executer" }
br-parser   = { path = "../br-parser"   }
br-script   = { path = "../br-script"   }

crossterm = "0.19.0"
ctrlc = "3.1.8"
whoami = "1.1.1"
