[package]
name = "br-executer"
version = "0.1.0"
authors = ["L3af <L3afMeAlon3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
br-builtin = { path = "../br-builtin" }
br-data    = { path = "../br-data"    }
br-parser  = { path = "../br-parser"  }
